[gd_scene load_steps=11 format=2]

[ext_resource path="res://prefabs/ProgressBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Terminal.gd" type="Script" id=2]

[sub_resource type="CubeMesh" id=20]
size = Vector3( 0.05, 0.7, 1 )

[sub_resource type="SpatialMaterial" id=21]
albedo_color = Color( 0.25, 0.25, 0.25, 1 )

[sub_resource type="CubeMesh" id=22]
size = Vector3( 0.01, 0.6, 0.9 )

[sub_resource type="SpatialMaterial" id=23]
albedo_color = Color( 0, 0, 0, 1 )
roughness = 0.5
emission_enabled = true
emission = Color( 1, 1, 1, 1 )
emission_energy = 2.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=24]
size = Vector3( 0.2, 0.1, 0.6 )

[sub_resource type="CubeMesh" id=25]
size = Vector3( 0.1, 0.01, 0.5 )

[sub_resource type="SpatialMaterial" id=26]
albedo_color = Color( 0.53, 0.53, 0.53, 1 )

[sub_resource type="CylinderShape" id=28]
radius = 0.4

[node name="Terminal" type="Spatial"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.348994, 0, -8.02041 )
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0189629, 1.93127, 0 )
mesh = SubResource( 20 )
material/0 = SubResource( 21 )

[node name="Screen" type="MeshInstance" parent="MeshInstance"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0225053, 0, 0 )
mesh = SubResource( 22 )
material/0 = SubResource( 23 )

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 0.835788, 0.549052, 0, -0.549052, 0.835788, 0, 0, 0, 1, 0.0509342, 1.36205, 0 )
mesh = SubResource( 24 )
material/0 = SubResource( 21 )

[node name="MeshInstance" type="MeshInstance" parent="MeshInstance2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96046e-08, 0.0579281, 0 )
mesh = SubResource( 25 )
material/0 = SubResource( 26 )

[node name="TerminalArea" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.93127, 0 )

[node name="CollisionShape" type="CollisionShape" parent="TerminalArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.410004, -0.0463829, 0.0246488 )
shape = SubResource( 28 )

[node name="ProgressBar" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.5, 0 )

[connection signal="area_entered" from="TerminalArea" to="." method="_on_TerminalArea_area_entered"]
[connection signal="area_exited" from="TerminalArea" to="." method="_on_TerminalArea_area_exited"]
